# TQVibeCAE

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  pyproject.toml
.cursor/rules/: ai-first-design.mdc  architecture-mvvm.mdc  core-project.mdc  cursor-rules-authoring.mdc  documentation-it.mdc  domain-model.mdc  electrical-cad-domain.mdc  git-commits.mdc  linting-ruff.mdc  pre-commit.mdc  pyside6-views.mdc  testing-tdd.mdc  typing-beartype.mdc
docs/idea/: README.md  data-model-open-questions.md  data-model-specification.md  electrical-cad-design-considerations.md  guida-progettazione-schema-elettrico.md  import-eplan-mapping-notes.md
docs/program/: README.md  ai-integration.md  architecture.md  dependencies.md  domain-model.md  mvvm-layers.md  tooling.md
docs/program/adr/: 000-template.md  001-pydantic-domain-models.md
docs/program/schemas/: README.md  application_settings.schema.json  connection_point.schema.json  graphic_cell_definition.schema.json  net.schema.json  placed_symbol.schema.json  project_index.schema.json  project_manifest.schema.json  sheet_presentation.schema.json  symbol_definition.schema.json  symbol_graphic_composition.schema.json  wire_graphic.schema.json
docs/user manual/: README.md  interfaccia.md  introduzione.md  progetto-e-schema.md  simboli-e-collegamenti.md
src/tqvibecae/: __init__.py
tests/integration/: test_editor_interaction.py  test_schematic_canvas_smoke.py  test_schematic_editor_smoke.py
tests/regression/: __init__.py
tests/strategies/: __init__.py  graphics_strategies.py
tests/unit/: test_schema_export.py
(+76 files in other folders)
